description to pyproject

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "cpca"
 version = "0.1.0"
-description = "Add your description here"
+description = "Complementary principal component analysis (CPCA) for fMRI confound correction."
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
