--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "cpca"
 version = "0.1.0"
 description = "Complementary principal component analysis (CPCA) for fMRI confound correction."
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.9,<3.10"
 dependencies = [
     'matplotlib==3.3.4',
     'nibabel==3.2.1',
@@ -25,3 +25,11 @@ dependencies = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "cpca",
+]
+
+[tool.uv.sources]
+cpca = { workspace = true }
